--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "consoletvs/charts",
+    "name": "diegonella/console-tvs-charts",
     "description": "The laravel charting package",
     "license": "MIT",
     "type": "library",
